--- a/src/pages/pt-br/guides/rss.mdx
+++ b/src/pages/pt-br/guides/rss.mdx
@@ -4,26 +4,27 @@ title: RSS
 description: Uma introdução a RSS em Astro
 i18nReady: true
 ---
-import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro';
+import Since from '~/components/Since.astro';
 
 
 Astro suporta geração rápida e automática de feeds RSS para blogs e outros websites orientados a conteúdo. Para mais informações sobre feeds RSS como um todo, veja [aboutfeeds.com](https://aboutfeeds.com/).
 
 ## Configurando `@astrojs/rss`
 
-O pacote `@astrojs/rss` fornece utilitários para a geração de feeds RSS utilizando [endpoints de API](/pt-br/core-concepts/endpoints/#endpoints-de-arquivos-estáticos). Isso permite builds estáticas *e* geração sob demanda quando você estiver utilizando um [adaptador de SSR](/pt-br/guides/server-side-rendering/#habilitando-o-ssr-em-seu-projeto).
+O [pacote `@astrojs/rss`](https://github.com/withastro/astro/tree/main/packages/astro-rss) fornece utilitários para a geração de feeds RSS utilizando [endpoints de API](/pt-br/core-concepts/endpoints/#endpoints-de-arquivos-estáticos). Isso permite builds estáticas *e* geração sob demanda quando você estiver utilizando um [adaptador de SSR](/pt-br/guides/server-side-rendering/#adicionando-um-adaptador).
 
 Primeiro, instale `@astrojs/rss` utilizando seu gerenciador de pacotes favorito:
 
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
-  npm i @astrojs/rss
+  npm install @astrojs/rss
   ```
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpm i @astrojs/rss
+  pnpm install @astrojs/rss
   ```
   </Fragment>
   <Fragment slot="yarn">
@@ -33,86 +34,152 @@ Primeiro, instale `@astrojs/rss` utilizando seu gerenciador de pacotes favorito:
   </Fragment>
 </PackageManagerTabs>
 
-Então, garanta de que você [configurou `site`](/pt-br/reference/configuration-reference/#site) no `astro.config` do seu projeto. Você utilizará essa opção para gerar os links do seu feed RSS [a partir da variável de ambiente `SITE`](/pt-br/guides/environment-variables/#variáveis-de-ambiente-padrões).
-
-:::note[Requer a v1]
-A variável de ambiente `SITE` apenas existe na recente versão Astro 1.0 beta. Atualize para a versão mais recente do Astro (`astro@latest`), ou escreva seu `site` manualmente se isso não for possível (veja exemplos abaixo).
-:::
+Então, garanta de que você [configurou `site`](/pt-br/reference/configuration-reference/#site) no `astro.config` do seu projeto. Você usará isso para gerar links para seus artigos RSS.
 
 Agora, vamos gerar nosso primeiro feed RSS! Crie um arquivo `rss.xml.js` no seu diretório `src/pages/`. `rss.xml` vai ser a URL final, então sinta-se livre para renomeá-lo se preferir.
 
 Em seguida, importe o utilitário `rss` do pacote `@astrojs/rss` e o invoque com os seguintes parâmetros:
 
-```js
-// src/pages/rss.xml.js
+```js title="src/pages/rss.xml.js"
 import rss from '@astrojs/rss';
 
-export const get = () => rss({
+export function get(context) {
+  return rss({
     // campo `<title>` no xml final
     title: 'Blog do Buzz',
     // campo `<description>` no xml final
     description: 'O guia de um humilde Astronauta para as estrelas',
-    // URL base para links <item> do RSS
-    // SITE irá utilizar o "site" do astro.config do seu projeto.
-    site: import.meta.env.SITE,
-    // lista de `<item>`s no xml final
-    // exemplo simples: gerar itens para cada arquivo md em /src/pages
-    // veja a seção "Gerando Items" para saber o frontmatter necessário e casos de uso mais avançados
-    items: import.meta.glob('./**/*.md'),
-    // (opcional) injete xml customizado
+    // Pega o "site" do seu projeto do contexto do endpoint
+    // https://docs.astro.build/pt-br/reference/api-reference/#contextsite
+    site: context.site,
+    // Array de `<item>`s no xml final
+    // Veja a seção "Gerando items" para exemplos utilizando coleções de conteúdo e importações de glob
+    items: [],
+    // (opcional) injeta xml customizado
     customData: `<language>pt-BR</language>`,
   });
+}
 ```
 
 ## Gerando `items`
 
-O campo `items` aceita uma dessas opções:
-1. [Um resultado de `import.meta.glob(...)`](#1-resultado-de-importmetaglob) **(apenas use isso para arquivos `.md` dentro do diretório `src/pages/`!)**
-2. [Uma lista de objetos de feed RSS](#2-lista-de-objetos-de-feed-rss), cada um com `link`, `title`, `pubDate`, e os campos opcionais `description` e `customData`.
+O campo `items` aceita uma lista de objetos de feed RSS, cada um com um `link`, `title`, `pubDate` e com os campos opcionais `description`, `content` e `customData`. Você pode gerar esse array a partir de uma coleção de conteúdo ou utilizando importações de glob.
 
-### 1. Resultado de `import.meta.glob`
+### Utilizando coleções de conteúdo
 
-Nós recomendados essa opção como um atalho conveniente para arquivos `.md` em `src/pages/`. Cada postagem deve ter `title`, `pubData` e opcionalmente os campos `description` e `customData` em seu frontmatter. Se isso não for possível, ou você preferir gerar esse frontmatter por código, [veja a opção 2](#2-lista-de-objetos-de-feed-rss).
+Para criar um feed RSS de páginas gerenciadas em [coleções de conteúdo](/pt-br/guides/content-collections/), você utiliza a função `getCollection()` para pegar a lista de seus itens.
 
-Digamos que as postagens do seu blog estão armanezadas no diretório `src/pages/blog`. Você pode gerar um feed RSS assim:
 
-```js
-// src/pages/rss.xml.js
+```js title="src/pages/rss.xml.js" "items:" "const blog = await getCollection('blog');"
 import rss from '@astrojs/rss';
+import { getCollection } from 'astro:content';
 
-export const get = () => rss({
+export async function get(context) {
+  const blog = await getCollection('blog');
+  return rss({
     title: 'Blog do Buzz',
     description: 'O guia de um humilde Astronauta para as estrelas',
-    site: import.meta.env.SITE,
-    items: import.meta.glob('./blog/**/*.md'),
+    site: context.site,
+    items: blog.map((postagem) => ({
+      title: postagem.data.titulo,
+      pubDate: postagem.data.dataPub,
+      description: postagem.data.descricao,
+      customData: postagem.data.dadosCustom,
+      // Computa o link RSS a partir da `slug` da postagem
+      // Este exemplo assume que todas as postagens são renderizadas como rotas `/blog/[slug]`
+      link: `/blog/${post.slug}/`,
+    })),
   });
+}
 ```
 
-Veja a [documentação da importação por glob do Vite](https://vitejs.dev/guide/features.html#glob-import) para mais detalhes nessa sintaxe de importação.
+Você pode configurar o esquema de sua coleção para garantir essas propriedades de RSS esperadas. Importe e aplique `rssSchema` para garantir que cada entrada da coleção produz um item válido no feed RSS.
 
-### 2. Lista de objetos de feed RSS
+```js title="src/content/config.ts" "rssSchema"
+import { rssSchema } from '@astrojs/rss';
 
-Nós recomendamos essa opção para arquivos `.md` fora do diretório `pages`. Isso é comum quando estiver gerando rotas [via `getStaticPaths`](/pt-br/reference/api-reference/#getstaticpaths).
+const blog = defineCollection({
+  schema: rssSchema,
+});
 
-Por exemplo, digamos que suas postagens `.md` estão armazenadas no diretório `src/postagens/`. Cada post tem `title`, `pubDate` e `slug` em seu frontmatter, aonde `slug` corresponde a URL final do seu site. Nós podemos gerar um feed RSS utilizando [o helper do Vite `import.meta.glob`](https://vitejs.dev/guide/features.html#glob-import) assim:
+export const collections = { blog };
+```
 
-```js
-// src/pages/rss.xml.js
-import rss from '@astrojs/rss';
+### Utilizando importações de glob
 
-const resultadoImportacaoPostagens = import.meta.glob('../postagens/**/*.md', { eager: true });
-const postagens = Object.values(resultadoImportacaoPostagens);
+Para criar um feed RSS a partir de documentos em `src/pages/`, utilize o utilitário `pagesGlobToRssItems()`. Ele aceita um resultado de [`import.meta.glob`](https://vitejs.dev/guide/features.html#glob-import) e devolve um array de itens de feed RSS válidos (veja [mais sobre como escrever padrões de glob](/pt-br/guides/imports/#padrões-de-glob) para especificar quais páginas incluir).
 
-export const get = () => rss({
+Essa função assume, mas não verifica, que todas as propriedades necessárias do feed estão presentes no frontmatter de cada documento. Se você encontrar erros, verifique o frontmatter de cada página manualmente.
+
+```js title="src/pages/rss.xml.js" "pagesGlobToRssItems" "await pagesGlobToRssItems("
+import rss, { pagesGlobToRssItems } from '@astrojs/rss';
+
+export async function get(context) {
+  return rss({
     title: 'Blog do Buzz',
     description: 'O guia de um humilde Astronauta para as estrelas',
-    site: import.meta.env.SITE,
+    site: context.site,
+    items: await pagesGlobToRssItems(
+      import.meta.glob('./blog/*.{md,mdx}'),
+    ),
+  });
+}
+```
+
+### Incluindo conteúdo completo de postagem
+
+<Since v="1.6.14" />
+
+A chave `content` contém o conteúdo completo da postagem como HTML. Isso te permite fazer o conteúdo da sua postagem inteira disponível a leitores de feeds RSS.
+
+:::tip
+Enquanto você estiver utilizando conteúdo HTML em XML, nós sugerimos utilizar um pacote como [`sanitize-html`](https://www.npmjs.com/package/sanitize-html) para garantir que o seu conteúdo é propriamente sanitizado, escapado e codificado.
+:::
+
+Ao utilizar coleções de conteúdo, renderize o `body` da postagem utilizando um parser padrão de Markdown como [`markdown-it`](https://github.com/markdown-it/markdown-it) e sanitize o resultado:
+
+```js title="src/pages/rss.xml.js" ins={2, 3, 4, 14}
+import rss from '@astrojs/rss';
+import sanitizeHtml from 'sanitize-html';
+import MarkdownIt from 'markdown-it';
+const parser = new MarkdownIt();
+
+export async function get(context) {
+  const blog = await getCollection('blog');
+  return rss({
+    title: 'Blog do Buzz',
+    description: 'O guia de um humilde Astronauta para as estrelas',
+    site: context.site,
+    items: blog.map((postagem) => ({
+      link: `/blog/${postagem.slug}/`,
+      // Nota: isso não irá processar componentes ou expressões JSX em arquivos MDX.
+      content: sanitizeHtml(parser.render(postagem.body)),
+      ...postagem.data,
+    })),
+  });
+}
+```
+
+Ao utilizar importações de glob com Markdown, nós sugerimos utilizar o utilitário `compiledContent()` para pegar o HTML renderizado para sanitização. Nota: essa funcionalidade **não é** suportada para arquivos MDX.
+
+```js title="src/pages/rss.xml.js" ins={2, 13}
+import rss from '@astrojs/rss';
+import sanitizeHtml from 'sanitize-html';
+
+export function get(context) {
+  const resultadoImportacaoPostagem = import.meta.glob('../postagens/**/*.md', { eager: true }); 
+  const postagens = Object.values(resultadoImportacaoPostagem);
+  return rss({
+    title: 'Blog do Buzz',
+    description: 'O guia de um humilde Astronauta para as estrelas',
+    site: context.site,
     items: postagens.map((postagem) => ({
       link: postagem.url,
-      title: postagem.frontmatter.title,
-      pubDate: postagem.frontmatter.pubDate,
-    }))
+      content: sanitizeHtml(postagem.compiledContent()),
+      ...postagem.frontmatter,
+    })),
   });
+}
 ```
 
 ## Adicionando uma folha de estilos
