--- a/src/pages/en/guides/rss.mdx
+++ b/src/pages/en/guides/rss.mdx
@@ -129,7 +129,7 @@ export async function get(context) {
 ```
 
 :::note[Using an older version?]
-In versions `@astrojs/rss` before v2.1.0, pass your glob result straight to `items` without the `pagesGlobToRssItems` wrapper:
+In versions of `@astrojs/rss` before v2.1.0, pass your glob result straight to `items` without the `pagesGlobToRssItems()` wrapper:
 ```js
 items: import.meta.glob('./blog/*.{md,mdx}'),
 ```
