--- a/src/pages/pt-br/guides/rss.mdx
+++ b/src/pages/pt-br/guides/rss.mdx
@@ -107,6 +107,8 @@ export const collections = { blog };
 
 ### Utilizando importações de glob
 
+<Since v="2.1.0" pkg="@astrojs/rss" />
+
 Para criar um feed RSS a partir de documentos em `src/pages/`, utilize o utilitário `pagesGlobToRssItems()`. Ele aceita um resultado de [`import.meta.glob`](https://vitejs.dev/guide/features.html#glob-import) e devolve um array de itens de feed RSS válidos (veja [mais sobre como escrever padrões de glob](/pt-br/guides/imports/#padrões-de-glob) para especificar quais páginas incluir).
 
 Essa função assume, mas não verifica, que todas as propriedades necessárias do feed estão presentes no frontmatter de cada documento. Se você encontrar erros, verifique o frontmatter de cada página manualmente.
@@ -125,6 +127,13 @@ export async function get(context) {
   });
 }
 ```
+
+:::note[Utilizando uma versão antiga?]
+Em versões de `@astrojs/rss` antes da v2.1.0, passe seu resultado de glob diretamente para `items` sem ser envolto de `pagesGlobToRssItems()`:
+```js
+items: import.meta.glob('./blog/*.{md,mdx}'),
+```
+:::
 
 ### Incluindo conteúdo completo de postagem
 
