update link from api-reference page

--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -841,7 +841,7 @@ const { Content, headings, remarkPluginFrontmatter } = await entry.render();
 ---
 ```
 
-See [the rendering entry contents guide](/en/guides/content-collections/#rendering-entry-content) for complete usage examples.
+See [the rendering entry contents guide](/en/guides/content-collections/#rendering-content) for complete usage examples.
 
 ## `import.meta`
 
