updates for getEntryBySlug incl code examples

--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -770,24 +770,24 @@ const draftBlogPosts = await getCollection('blog', ({ data }) => {
 
 [See the `getCollection()` guide section](/en/guides/content-collections/#getcollection) for complete usage examples.
 
-### `getEntry()`
+### `getEntryBySlug()`
 
 **Type:** `(collection: string, id: string) => CollectionEntry<collection>`
 
-`getEntry()` is a function that retrieves a single collection entry by collection name and [entry `id`](#id).
+`getEntryBySlug()` is a function that retrieves a single collection entry by collection name and entry `slug`.
 
 
 ```astro
 ---
-import { getEntry } from 'astro:content';
+import { getEntryBySlug } from 'astro:content';
 
-const enterprise = await getEntry('blog', 'enterprise.md');
+const enterprise = await getEntryBySlug('blog', 'enterprise.md');
 ---
 ```
 
 ### Collection Entry Type
 
-The [`getCollection()`](#getcollection) and [`getEntry()`](#getentry) functions each return entries with the `CollectionEntry` type. This type is available as a utility from `astro:content`:
+The [`getCollection()`](#getcollection) and [`getEntryBySlug()`](#getEntryBySlug) functions each return entries with the `CollectionEntry` type. This type is available as a utility from `astro:content`:
 
 ```ts
 import type { CollectionEntry } from 'astro:content';
@@ -834,8 +834,8 @@ A function to compile a given Markdown or MDX document for rendering. This retur
 
 ```astro
 ---
-import { getEntry } from 'astro:content';
-const entry = await getEntry('blog', 'entry-1.md');
+import { getEntryBySlug } from 'astro:content';
+const entry = await getEntryBySlug('blog', 'entry-1.md');
 
 const { Content, headings, remarkPluginFrontmatter } = await entry.render();
 ---
