--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -86,7 +86,7 @@ For example, you can use the following directory structure to organize i18n tran
 
 ## Defining Collections
 
-:::caution
+:::note
 The `src/content/config.ts` file is optional. However, choosing not to define your collections will disable some of their best features like frontmatter schema validation or automatic TypeScript typings. 
 :::
 
@@ -234,20 +234,20 @@ defineCollection({
 
 ### Defining custom slugs
 
-Astro will generate a unique `slug` value for each content entry. By default, a content entry's `slug` is based on its `id` (its filename).
+Every content entry generates a URL-friendly `slug` property from its file `id`. The slug is used to query the entry directly from your collection. It is also useful when creating new pages and URLs from your content.
 
-To customize this value, provide a `slug()` function in `defineCollection()`. Your `slug()` function can override the default slug with a custom value of your choosing.
+To customize the generated `slug` value, you can manually override Astro's default behavior by providing a `slug()` function in `defineCollection()`. Whatever value you return from this function will be used as the new `slug` property for each entry. 
 
 ```ts {4-6}
-// Example: Override the default entry slug with the 
-// "permalink" frontmatter property, if it exists.
-const blog = defineCollection({
-  slug: ({ id, defaultSlug, data, body }) => {
-    return data.permalink || defaultSlug;
+// Example: Override the default entry slug with a custom value.
+const blogCollection = defineCollection({
+  slug: ({ id, defaultSlug }) => {
+    return myCustomSlugProcessor(id) || defaultSlug;
   },
 });
 ```
 
+For performance reasons, the `slug()` function does not have access to your content's body or frontmatter data. If you need these values to generate your slug, you should do that directly inside the `src/pages` Astro component responsible for rendering your content. See [Generating custom routes](#generating-custom-routes) for more details.
 
 
 ## Querying Collections
@@ -385,15 +385,58 @@ This will generate a new page for every entry in the `blog` collection. For exam
 If you are building a dynamic website (using Astro's SSR support), you are not expected to generate any paths ahead-of-time during the build. Instead, your page should examine the request (using `Astro.request` or `Astro.params`) to find the `slug` on-demand, and then fetch it using [`getEntryBySlug()`](/en/reference/api-reference/#getentrybyslug). 
 
 
-```astro "{ slug: Astro.params }"
+```astro
 ---
 // src/pages/posts/[slug].astro
-// NOTE: This example will only work in 
 import { getEntryBySlug } from 'astro:content';
-// 1. Get the slug from the request, on-demand
+// 1. Get the slug from the incoming server request
 const { slug } = Astro.params;
-// 2. Query the entry directly using its slug
+// 2. Query for the entry directly using the request slug
 const entry = await getEntryBySlug('blog', slug);
+// 3. (Optional) render the entry to HTML in the template
+const { Content } = await entry.render();
+---
+<h1>{entry.data.title}</h1>
+<Content />
+```
+
+### Generating custom routes
+
+The `slug()` function in `defineCollection()` lets you customize how a content entry `slug` value is created. However, this function does not have access to any frontmatter.
+
+You can still create custom URLs from your content frontmatter inside the `getStaticPaths()` function, when building for static output.
+
+For example, to create a custom URL for each blog post based on its `permalink` frontmatter property, you could do the following:
+
+```astro "entry.data.permalink"
+---
+// src/pages/posts/[slug].astro
+// 1. Query the collection and generate a new path for each entry, 
+//    based on its "permalink" frontmatter property.
+export async function getStaticPaths() {
+  const blogEntries = await getCollection('blog');
+  return blogEntries.map(entry => ({
+    params: { slug: entry.data.permalink || entry.data.slug }, 
+    props: { entry },
+  }));
+}
+// 2. When its time to render, you can get the entry directly from the prop.
+const { entry } = Astro.props;
+---
+```
+
+If you are building for server output (SSR), you would do a similar lookup of the entire collection on every request to find your matching entry. However this is not recommended for large collections, where loading the entire collection on every request may slow down your page response time.
+
+```astro "entry.data.permalink"
+---
+// src/pages/posts/[slug].astro
+import { getEntryBySlug } from 'astro:content';
+// 1. Get the slug from the incoming server request
+const { slug } = Astro.params;
+// 2. Query and filter the entire collection
+const blogEntries = await getCollection('blog', (entry) => {
+  return (entry.data.permalink || entry.slug) === slug;
+});
 // 3. (Optional) render the entry to HTML in the template
 const { Content } = await entry.render();
 ---
