--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -404,9 +404,7 @@ const { Content } = await entry.render();
 
 The `slug()` function in `defineCollection()` lets you customize how a content entry `slug` value is created. However, this function does not have access to any frontmatter.
 
-You can still create custom URLs from your content frontmatter inside the `getStaticPaths()` function, when building for static output.
-
-For example, to create a custom URL for each blog post based on its `permalink` frontmatter property, you could do the following:
+You can still create custom URLs from your content frontmatter inside the `getStaticPaths()` function, when building for static output. For example, to create a custom URL for each blog post based on its `permalink` frontmatter property, you could do the following:
 
 ```astro "entry.data.permalink"
 ---
