Apply suggestions from code review

--- a/src/pages/es/reference/errors/invalid-frontmatter-injection-error.mdx
+++ b/src/pages/es/reference/errors/invalid-frontmatter-injection-error.mdx
@@ -18,5 +18,5 @@ Un plugin de remark o rehype intentó inyectar frontmatter inválido. Esto ocurr
 
 **Ver también:**
 
--  [Modifición programática del frontmatter](/en/guides/markdown-content/#modificación-programática-del-frontmatter)
+-  [Modificación programática del frontmatter](/es/guides/markdown-content/#modificación-programática-del-frontmatter)
 
