docs(svelte): Fix vitePreprocess import
`vitePreprocess` must be imported from `@sveltejs/vite-plugin-svelte`,
not `@astrojs/svelte`

--- a/src/pages/en/guides/integrations-guide/svelte.mdx
+++ b/src/pages/en/guides/integrations-guide/svelte.mdx
@@ -140,7 +140,7 @@ If you're using a preprocessor like TypeScript or SCSS in your Svelte files, you
 
 ```js
 // svelte.config.js
-import { vitePreprocess } from '@astrojs/svelte';
+import { vitePreprocess } from '@sveltejs/vite-plugin-svelte';
 
 export default {
 	preprocess: vitePreprocess(),
