--- a/src/content/docs/es/reference/errors/missing-image-dimension.mdx
+++ b/src/content/docs/es/reference/errors/missing-image-dimension.mdx
@@ -14,7 +14,7 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 ## ¿Qué salió mal?
 Para imágenes remotas, no se pueden inferir `width` y `height` del archivo original. Por lo tanto, para evitar el CLS, siempre se requieren esas dos propiedades.
 
-Si tu imagen está dentro de tu carpeta `src`, probablemente quieras importarla en su lugar. Consulte [la guía de importaciones para obtener más información](/es/guides/imports/#otros-recursos).
+Si tu imagen está dentro de tu carpeta `src`, probablemente quieras importarla en su lugar. Consulta [la guía de importaciones para obtener más información](/es/guides/imports/#otros-recursos).
 
 **Ver también:**
 -  [Activos (experimental)](/es/guides/assets/)
