--- a/src/content/docs/es/reference/errors/unsupported-image-format.mdx
+++ b/src/content/docs/es/reference/errors/unsupported-image-format.mdx
@@ -14,7 +14,7 @@ githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/
 ## ¿Qué salió mal?
 Los servicios precargados de imagen no tienen soporte para optimizar todos los formatos de imagen.
 
-Para formatos no admitidos como SVG y GIF, puede usar una etiqueta `img` directamente:
+Para formatos no admitidos como SVG y GIF, puedes usar una etiqueta `img` directamente:
 ```astro
 ---
 import rocket from '../assets/images/rocket.svg'
