--- a/src/content/docs/en/recipes.mdx
+++ b/src/content/docs/en/recipes.mdx
@@ -22,4 +22,6 @@ Add your own here! See our [recipes contributing guide](https://github.com/witha
 - [Add animated page transitions with Swup](https://navillus.dev/blog/astro-plus-swup)
 - [Use UnoCSS in Astro](https://www.elian.codes/blog/23-02-11-implementing-unocss-in-astro/)
 - [Build a table of contents from Astro's Markdown headings](https://kld.dev/building-table-of-contents/)
+- [Create a Remark plugin to remove runts from your Markdown files](https://eatmon.co/blog/remove-runts-markdown/)
 - [Add searching to your site with Pagefind](https://blog.otterlord.dev/post/astro-search/)
+- [Get VSCode, ESLint & Prettier working with Astro](https://patheticgeek.dev/blog/astro-prettier-eslint-vscode)
